refactoring of the dependency tracing and added type hinting. Isuru Fernando
(IF) developed the Universal2 (arm64) support. Min Ragan-Kelley (MinRK) did a
lot of work discussing OSX things with MB, and contributed fixes as well.

See `this Changelog site <https://keepachangelog.com/en/1.0.0>`_ for helpful
rules on making a good Changelog.

********
Releases
********

* [Unreleased]

* [0.10.3] - 2022-11-04

  * Support for Python 3.6 has been dropped.
  * Delocate no longer depends on the ``wheel`` API.
  * Running Delocate on already delocated wheels will no longer corrupt them.
    [#157](https://github.com/matthew-brett/delocate/pull/157)

* [0.10.2] - 2021-12-31

  Bugfix and compatibility release.

  * Ensured support for versions of wheel beyond 0.37.1.  If you are using older
    versions of Delocate then you may need to to pin ``wheel==0.37.1``.
    [#135](https://github.com/matthew-brett/delocate/issues/135)
  * Fixed crashes when ``otool`` gives multiple architectures in its output.
    This does not support different dependencies per-architecture.
    [#130](https://github.com/matthew-brett/delocate/pull/130)

* [0.10.1] - 2021-11-23

  Bugfix release.

  * Delocate will no longer fail when libraries use different install names to
    refer to the same library.
    [#134](https://github.com/matthew-brett/delocate/pull/134)

* [0.10.0] - 2021-09-22

  First release that requires Python 3.

  * ``wheel_libs`` now supports recursive dependencies.
  * ``listdeps`` command now supports recursive dependencies.
    [#118](https://github.com/matthew-brett/delocate/pull/118)
  * Wheels with top-level extension modules or wheels using namespaces can now
    be delocated.
    [#123](https://github.com/matthew-brett/delocate/pull/123)
  * Wheels with multiple packages will no longer copy duplicate libraries.
    [#35](https://github.com/matthew-brett/delocate/issues/35)
  * ``delocate.tools.back_tick`` has been deprecated.