@@ -473,6 +473,9 @@ def tree_libs(
     return lib_dict
 
 
+_default_paths_to_search = ("/usr/local/lib", "/usr/lib")
+
+
 def resolve_dynamic_paths(lib_path, rpaths, loader_path, executable_path=None):
     # type: (Text, Iterable[Text], Text, Optional[Text]) -> Text
     """Return `lib_path` with any special runtime linking names resolved.
@@ -511,20 +514,33 @@ def resolve_dynamic_paths(lib_path, rpaths, loader_path, executable_path=None):
     """
     if executable_path is None:
         executable_path = dirname(sys.executable)
-    if lib_path.startswith("@loader_path/"):
-        return realpath(pjoin(loader_path, lib_path.split("/", 1)[1]))
-    if lib_path.startswith("@executable_path/"):
-        return realpath(pjoin(executable_path, lib_path.split("/", 1)[1]))
-    if not lib_path.startswith("@rpath/"):
+
+    if not lib_path.startswith(
+        ("@rpath/", "@loader_path/", "@executable_path/")
+    ):
         return realpath(lib_path)
 
-    lib_rpath = lib_path.split("/", 1)[1]
-    for rpath in rpaths:
-        rpath_lib = resolve_dynamic_paths(
-            pjoin(rpath, lib_rpath), (), loader_path, executable_path
-        )
-        if os.path.exists(rpath_lib):
-            return realpath(rpath_lib)
+    if lib_path.startswith("@loader_path/"):
+        paths_to_search = [loader_path]
+    elif lib_path.startswith("@executable_path/"):
+        paths_to_search = [executable_path]
+    elif lib_path.startswith("@rpath/"):
+        paths_to_search = list(rpaths)
+
+    # these paths are searched by the macos loader in order if the
+    # library is not in the previous paths.
+    paths_to_search.extend(_default_paths_to_search)
+
+    rel_path = lib_path.split("/", 1)[1]
+    for prefix_path in paths_to_search:
+        try:
+            abs_path = resolve_dynamic_paths(
+                pjoin(prefix_path, rel_path), (), loader_path, executable_path
+            )
+        except DependencyNotFound:
+            continue
+        if os.path.exists(abs_path):
+            return realpath(abs_path)
 
     raise DependencyNotFound(lib_path)
 
@@ -561,7 +577,7 @@ def resolve_rpath(lib_path, rpaths):
         return lib_path
 
     lib_rpath = lib_path.split("/", 1)[1]
-    for rpath in rpaths:
+    for rpath in (*rpaths, *_default_paths_to_search):
         rpath_lib = realpath(pjoin(rpath, lib_rpath))
         if os.path.exists(rpath_lib):
             return rpath_lib
