@@ -11,6 +11,7 @@ from os.path import dirname
 from os.path import join as pjoin
 from os.path import realpath, relpath, split
 from typing import Dict, Iterable, Text
+from unittest import mock
 
 import pytest
 
@@ -497,6 +498,21 @@ def test_resolve_rpath():
     assert_equal(resolve_rpath(lib_rpath, ["/nonexist", path]), realpath(LIBA))
     # Should return the given parameter as is since it can't be found
     assert_equal(resolve_rpath(lib_rpath, []), lib_rpath)
+
+
+@pytest.mark.xfail(sys.platform == "win32", reason="Needs Unix linkage.")
+def test_resolve_dynamic_paths_fallthrough() -> None:
+    # A minimal test of the resolve_dynamic_paths fallthrough
+    path, lib = split(LIBA)
+    lib_rpath = pjoin("@rpath", lib)
+    # Should fail as rpath is not given and the library cannot be found
+    # in default paths to search
+    with pytest.raises(DependencyNotFound):
+        resolve_dynamic_paths(lib_rpath, [], path)
+    # Since the library is in the default paths to search, this should
+    # return the full path to the library
+    with mock.patch("delocate.libsana._default_paths_to_search", (path,)):
+        assert resolve_dynamic_paths(lib_rpath, [], path) == realpath(LIBA)
 
 
 @pytest.mark.xfail(sys.platform != "darwin", reason="otool")
